<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Java Interview Questions</string>
    <string name="action_settings">Settings</string>
    <string name="java_string">String</string>
    <string name="java_thread">Thread</string>
	<string name="java_exception">Exceptions</string>
	<string name="java_collection">Collections</string>
	<string name="java_basic">Basics</string>
	<string name="java_concurrency">Concurrency</string>
	<string name="java_miscellaneous">Miscellaneous</string>
	<string name="XX">XX/</string><string name="YY">YY</string>
	<string name="question">Question</string>
	<string name="answer">Press below ? button for Answer</string>
	<string name="answer_text">Press below question mark button for Answer</string>
	<string name="main_titlebar">Core Java Interview Questions</string>
	<string name="question_titlebar">Subjects</string>
	<string name="rate_us">Rate Us</string>
</resources>
