<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainactivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context="sample.code.corejavainterviewquestion.MainActivity" >

    <Button
        android:id="@+id/basic_questions"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="33dp"
        android:layout_marginStart="33dp"
        android:layout_marginTop="60dp"
        android:background="@drawable/button_press_style"
        android:text="@string/java_basic"
        android:textColor="#ffffff" />

    <Button
        android:id="@+id/string_questions"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:layout_alignBaseline="@+id/basic_questions"
        android:layout_alignBottom="@+id/basic_questions"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="39dp"
        android:layout_marginRight="39dp"
        android:background="@drawable/button_press_style"
        android:text="@string/java_string"
        android:textColor="#ffffff" />

    <Button
        android:id="@+id/thread_questions"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:layout_alignLeft="@+id/basic_questions"
        android:layout_alignStart="@+id/basic_questions"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/basic_questions"
        android:layout_marginStart="33dp"
        android:layout_marginLeft="33dp"
        android:layout_marginTop="60dp"
        android:background="@drawable/button_press_style"
        android:text="@string/java_thread"
        android:textColor="#ffffff" />

    <Button
        android:id="@+id/exception_questions"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:layout_alignBaseline="@+id/thread_questions"
        android:layout_alignBottom="@+id/thread_questions"
        android:layout_alignLeft="@+id/string_questions"
        android:layout_alignStart="@+id/string_questions"
       	android:layout_marginEnd="39dp"
        android:layout_marginRight="39dp"
        android:background="@drawable/button_press_style"
        android:text="@string/java_exception"
        android:textColor="#ffffff" />

    <Button
        android:id="@+id/collection_questions"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:layout_alignLeft="@+id/thread_questions"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignStart="@+id/basic_questions"
        android:layout_below="@+id/thread_questions"
        android:layout_marginStart="33dp"
        android:layout_marginLeft="33dp"
        android:layout_marginTop="60dp"
        android:background="@drawable/button_press_style"
        android:text="@string/java_collection"
        android:textColor="#ffffff" />

    <Button
        android:id="@+id/concurrency_questions"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:layout_alignBaseline="@+id/collection_questions"
        android:layout_alignBottom="@+id/collection_questions"
        android:layout_alignLeft="@+id/exception_questions"
        android:layout_alignStart="@+id/string_questions"
        android:layout_marginEnd="39dp"
        android:layout_marginRight="39dp"
        android:background="@drawable/button_press_style"
        android:text="@string/java_concurrency"
        android:textColor="#ffffff" />

    <Button
        android:id="@+id/miscellaneous_questions"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:layout_alignLeft="@+id/collection_questions"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignStart="@+id/basic_questions"
        android:layout_below="@+id/collection_questions"
        android:layout_marginStart="33dp"
        android:layout_marginLeft="33dp"
        android:layout_marginTop="60dp"
        android:background="@drawable/button_press_style"
        android:text="@string/java_miscellaneous"
        android:textColor="#ffffff" />

    <Button
        android:id="@+id/rateus"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_alignBaseline="@+id/miscellaneous_questions"
        android:layout_alignBottom="@+id/miscellaneous_questions"
        android:layout_alignLeft="@+id/concurrency_questions"
        android:layout_alignStart="@+id/concurrency_questions"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:background="@drawable/rate_button_press"
        android:text="@string/rate_us"
        android:textColor="#ff0000" />

</RelativeLayout>